Synt sykemelding api/oppdatert kode og flyttet til gcp (#2598)
Oppdatert kode og flyttet til dev-gcp